# ChangeLog for Portage; the Gentoo Linux ports system 
# Copyright 1999-2004 Gentoo Foundation; Distributed under the GPL v2
# $Id$

  MAJOR CHANGES in 2.0.51:
    1. /var/cache/edb/virtuals is no longer used at all. It's calculated now.
    2. /var/cache/edb/world is now /var/lib/portage/world.
    3. /etc/portage/profile/virtuals is _USER_ configs only.


  20 Oct 2004; Jason Stubbs <jstubbs@gentoo.org> repoman: Added check for
  digest entries that aren't used within the corresponding ebuild's SRC_URI.

  20 Oct 2004; Jason Stubbs <jstubbs@gentoo.org> emerge: Added support for
  EMERGE_WARNING_DELAY defaulting it to 10. Changed all the hardcoded delays
  to use it. Needed for the catalyst guys as it includes a number of unmerges
  of system packages.

  20 Oct 2004; Jason Stubbs <jstubbs@gentoo.org> emerge: Changed the
  /path/to/ebuild warning. Added a check on what ebuild is chosen and
  a failure if it doesn't match what was specified. Added the same for
  /path/to/tbz2.

*portage-2.0.51_rc10 (19 Oct 2004): Potential Final #1.

  19 Oct 2004; Nicholas Jones <carpaski@gentoo.org> emerge: Visual acuity
  enhancements. Fixed all the spaces in the option handling.

  19 Oct 2004; Nicholas Jones <carpaski@gentoo.org> emerge.1: Updated for
  'f' and 'S'.

  19 Oct 2004; Nicholas Jones <carpaski@gentoo.org> getbinpkg.py: Potential
  fix for a missing dict key.

  19 Oct 2004; Nicholas Jones <carpaski@gentoo.org> portage.py: Prelink
  tempfile per pid.

  18 Oct 2004; Nicholas Jones <carpaski@gentoo.org> *.py: Added a protocol
  change for cPickles to make them more efficient (binary).

  18 Oct 2004; Nicholas Jones <carpaski@gentoo.org> sandbox: Fixes for some
  incorrect indexes that cause some boxes to have very random issues.

  18 Oct 2004; Nicholas Jones <carpaski@gentoo.org> portage_locks.py: Reverted
  the lock code to the lockf()+hardlock version as the new code has some
  inexplicable incompatibility with NFS.
  